--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,8 @@
       </a>
 
       <div class="trigger">
-        {% for my_page in site.pages %}
+		{% assign menu=site.pages | where:"in_menu", "Y" | sort:'sort' %}
+        {% for my_page in menu %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
