--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}{{ site.index[page.lang] }}">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -14,7 +14,7 @@
       </a>
 
       <div class="trigger">
-		{% assign menu=site.pages | where:"in_menu", "Y" | sort:'sort' %}
+		{% assign menu=site.pages | where:"in_menu", "Y" | where:"lang", page.lang | sort:'sort' %}
         {% for my_page in menu %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
