--- a/_includes/lang.html
+++ b/_includes/lang.html
@@ -1,4 +1,4 @@
-<div class="wrapper" style="text-align: right; line-height: 2em"> 
+<div class="wrapper lang"> 
 {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %} 
 {% for post in posts %} 
 	<a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a> 
