--- a/css/main.scss
+++ b/css/main.scss
@@ -15,15 +15,15 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$background-color: #999999;
+$brand-color:      #4A70A8;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    60%;
 
 $on-palm:          600px;
 $on-laptop:        800px;
