--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -261,11 +261,13 @@ pre {
 }
 
 .lang {
-    text-align: center;
+    text-align: left;
+    margin-top: 15px;
 }
 
 .lang_item {
     background-color: lighten($background-color, 5%);
     border-radius: 25px;
     width: 60px;
+    padding: 10px;
 }
