--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #999999;
+$background-color: #fdfdfd;
 $brand-color:      #4A70A8;
 
 $grey-color:       #828282;
@@ -43,11 +43,11 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+ 	"blerifa_var",
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+	"blerifa"
 ;
