--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -98,7 +98,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $brand-color;
+    border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
 
@@ -115,7 +115,7 @@
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color-dark;
+    color: $grey-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
