--- a/css/main.scss
+++ b/css/main.scss
@@ -16,14 +16,14 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #4A70A8;
+$brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    60%;
+$content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
