--- a/_sass/blerifa.scss
+++ b/_sass/blerifa.scss
@@ -111,3 +111,12 @@ article .post {
     // Positioning context for the mobile navigation icon
     position: relative;
 }
+
+/**
+ * Images
+*/
+img {
+    max-width: 100%;
+    vertical-align: middle;
+    margin: 10px;
+}
