--- a/_sass/blerifa.scss
+++ b/_sass/blerifa.scss
@@ -64,14 +64,15 @@
 
 .lang {
     text-align: left;
-    margin-top: 15px;
+    margin-top: 7px;
 }
 
 .lang_item {
     background-color: lighten($background-color, 5%);
     border-radius: 25px;
     width: 60px;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 /**
@@ -118,5 +119,6 @@ article .post {
 img {
     max-width: 100%;
     vertical-align: middle;
-    margin: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
