add banner system

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
   <body>
 
     {% include header.html %}
+	<div class="banner">
+	{% include banner.html %}
+	</div>
 	{% include lang.html %}
 
     <div class="page-content">
