--- a/_sass/blerifa.scss
+++ b/_sass/blerifa.scss
@@ -176,3 +176,11 @@ img {
 	text-align: center;
 	background-color: $brand-color;
 }
+
+/**
+ * Latest News
+*/
+.latest_news {
+	background-color: darken($background-color, 5%);
+	padding-bottom : 10px;
+}
