--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,16 @@
 
 		</article>
       </div>
+
+	  <div class="latest_news">
+		<div class="wrapper">
+			<h1>{{site.data.trad["latest_news"][page.lang]}}</h1>
+			{% capture include_latest_news %}{% include latest_news.md %}{% endcapture %}
+			{{ include_latest_news | markdownify }}
+		</div>
+	  </div>
     </div>
+	
 
     {% include footer.html %}
 
