--- a/_sass/blerifa.scss
+++ b/_sass/blerifa.scss
@@ -96,6 +96,7 @@ article .post {
 .site-footer {
     border-top: 1px solid $brand-color;
     padding: $spacing-unit 0;
+	background-color: darken($background-color, 5%);
 }
 
 .footer-col-wrapper {
@@ -112,6 +113,10 @@ article .post {
 
     // Positioning context for the mobile navigation icon
     position: relative;
+}
+
+.page-content {
+	padding-bottom: 0px;
 }
 
 /**
@@ -181,6 +186,6 @@ img {
  * Latest News
 */
 .latest_news {
-	background-color: darken($background-color, 5%);
+	background-color: darken($background-color, 3%);
 	padding-bottom : 10px;
 }
