--- a/_includes/html5video.html
+++ b/_includes/html5video.html
@@ -1,5 +1,9 @@
 <style>.embed-container { position: relative; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
+{%if include.gif == true %}
+<video loop autoplay class='embed-container'>
+{% else %}
 <video controls class='embed-container'>
-   <source src="{{include.id}}" type="video/ogg">
+{% endif %}
+   <source src="{{site.base_url}}/assets/video/{{include.id}}" type="video/ogg">
    {{site.data.trad["video_not_supported"][page.lang]}}
 </video>
