--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
+	<link href="{{ site.baseurl }}/css/font-awesome.min.css" rel="stylesheet">
+	
   {% if page.alternate %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title[page.lang] }}" href="{{  page.alternate | prepend: "/" | prepend: site.baseurl | prepend: site.url }}">
   {% endif %}
