--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,16 +2,16 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title[page.lang] | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description[page.lang] }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link href="{{ site.baseurl }}/css/font-awesome.min.css" rel="stylesheet">
-	
+
   {% if page.alternate %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title[page.lang] }}" href="{{  page.alternate | prepend: "/" | prepend: site.baseurl | prepend: site.url }}">
   {% endif %}
   <link rel="icon" type="image/x-icon" href="{{ "/favicon.png" | prepend: site.baseurl }}">
+	{% include seo.html %}
 </head>
