--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,11 @@
             {% if my_page.menu_main == true %}
               <a class="page-link menu_main" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
             {% else %}
-              <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+							{% if my_page.direct_link  %}
+								<a class="page-link" href="{{ my_page.direct_link }}">{{ my_page.title }}</a>
+							{% else %}
+              	<a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+							{% endif %}
             {% endif %}
           {% endif %}
         {% endfor %}
